# ToxicClassify

./: .gitattributes  .gitignore  README.md  nohup.out  prediction_results.xlsx  pyproject.toml  requirements.txt  应拒答题目_results.xlsx  非拒答题目_results.xlsx
ToxiCN_ex/: app.py  predict.py  run.py  train_eval.py  应拒答题目.xlsx
ToxiCN_ex/model/: Config_base.py
ToxiCN_ex/src/: BERT.py  Models.py  datasets.py
construct_data/: dutywords.json  dutywords.txt  generate_sentences_illegal.txt  generate_sentences_illegal2.csv  generate_sentences_illegal2.txt  generate_sentences_legal.csv  generate_sentences_legal.txt  illegal_quest_classify.py  my_traindata.txt  mytrain.json  non_toxic.xlsx
construct_data/sensitive_classification/: trans_traindata.py
construct_data/sensitive_sentence/: A01_sentence.csv  A01_sentence.txt  A02_sentence.csv  A02_sentence.txt  A03_sentence.csv  A03_sentence.txt  A04_sentence.csv  A04_sentence.txt  A05_sentence.csv  A05_sentence.txt  B01_sentence.csv  B02_sentence.csv  B03_sentence.csv  B03_sentence.txt  C01_sentence.csv  C02_sentence.csv  C03_sentence.txt  D01_sentence.csv  construct_data_train_dev.py  generate_sentences_illegal2.csv  illegal_class_to_label.py  illegal_questions_classify.txt  illegal_sentence_label.txt  my_dataset_v4.json  my_train_v4.json
construct_data/sensitive_word/: A01.json  A01.txt  A02.json  A02.txt  A03.txt  A04.json  (+16 more)
construct_duty_json/: ambiguous_word.txt  dutyword2json.py  illegal_questions.txt  my_test_v2.json  my_test_v3.json  my_toxicity_data.json  my_train_v2.json  mytest.json  nohup.out  output.txt  region.json
(+43 files in other folders)
